feat(order-service): improve OrderServiceMockTest readability and structure