@@ -6,39 +6,42 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import se.iths.armin.shoewebshop.entity.Cart;
+import se.iths.armin.shoewebshop.entity.CartItem;
 import se.iths.armin.shoewebshop.entity.CustomerOrder;
 import se.iths.armin.shoewebshop.entity.Product;
 import se.iths.armin.shoewebshop.repository.OrderRepository;
+import se.iths.armin.mailservice.MailService;
 
 import java.math.BigDecimal;
-import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-public class OrderServiceMockTest {
+class OrderServiceMockTest {
 
     @Mock
     private OrderRepository orderRepository;
+
+    @Mock
+    private MailService mailService;
 
     @InjectMocks
     private OrderService orderService;
 
     @Test
-    void checkout_shoudlCreateOrderAndClearCart() {
-        String username = "test@example.com";
-        Cart cart = createTestCart();
+    void checkout_shouldCreateOrderAndClearCart() {
 
-        CustomerOrder savedOrder = new  CustomerOrder();
+        String username = "test@example.com";
+
+        Cart cart = createCart();
+
+        CustomerOrder savedOrder = new CustomerOrder();
         savedOrder.setId(1L);
         savedOrder.setUsername(username);
-        savedOrder.setOrderDate(LocalDateTime.now());
-        savedOrder.setTotalPrice(cart.getTotalPrice().doubleValue());
+        savedOrder.setTotalPrice(120.0);
 
         when(orderRepository.save(any(CustomerOrder.class))).thenReturn(savedOrder);
 
@@ -48,48 +51,55 @@ public class OrderServiceMockTest {
         assertEquals(username, result.getUsername());
         assertEquals(1, result.getItems().size());
         assertEquals(2, result.getItems().get(0).getQuantity());
+
         assertTrue(cart.isEmpty());
+
+        verify(orderRepository, times(1)).save(any(CustomerOrder.class));
+        verify(mailService, times(1)).sendMail(
+                eq(username),
+                eq("Order Confirmation"),
+                any(String.class)
+        );
     }
 
     @Test
-    void getOrdersForUSer_shouldReturnUserOrders() {
+    void getOrdersForUser_shouldReturnOrders() {
+
         String username = "test@example.com";
-        List<CustomerOrder> orders = Arrays.asList(
-                createTestOrder(username),
-                createTestOrder(username)
+
+        List<CustomerOrder> orders = List.of(
+                createOrder(username),
+                createOrder(username)
         );
+
         when(orderRepository.findByUsername(username)).thenReturn(orders);
 
         List<CustomerOrder> result = orderService.getOrdersForUser(username);
 
         assertEquals(2, result.size());
-        assertTrue(result.stream().allMatch(order -> username.equals(order.getUsername())));
+        assertTrue(result.stream().allMatch(o -> o.getUsername().equals(username)));
+
+        verify(orderRepository, times(1)).findByUsername(username);
     }
 
-    private Cart createTestCart() {
+    private Cart createCart() {
         Cart cart = new Cart();
-        Product testProduct = createTestProduct();
-        cart.addProduct(testProduct);
-        cart.addProduct(testProduct);
+
+        Product product = new Product();
+        product.setProductName("Test Shoe");
+        product.setPrice(new BigDecimal("60.00"));
+
+        CartItem item = new CartItem(product, 2);
+
+        cart.getCartItems().add(item);
+
         return cart;
     }
 
-    private Product createTestProduct() {
-        Product product = new Product();
-        product.setProductName("Test Shoe");
-        product.setCategory("Sneakers");
-        product.setPrice(new BigDecimal("60.00"));
-        product.setProductImageURL("http://example.com/test.jpg");
-        return product;
-    }
-
-    private CustomerOrder createTestOrder(String username) {
+    private CustomerOrder createOrder(String username) {
         CustomerOrder order = new CustomerOrder();
         order.setUsername(username);
-        order.setOrderDate(LocalDateTime.now());
-        order.setTotalPrice(120.00);
+        order.setTotalPrice(120.0);
         return order;
     }
-
-
 }
